clusters/hive/apps/homeassistant/k8s-manifests/addon-tasmoadmin-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addon-tasmoadmin
  namespace: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: tasmoadmin.home.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: addon-tasmoadmin
                port:
                  number: 80
            path: /
            pathType: Prefix
